# python-console-game

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml
brain_games/: calc_game.py  cli.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/games/: calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
