[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain-games package"
authors = ["asagafonov <a.s.agafonov@yandex.ru>"]
repository = "https://github.com/asagafonov/python-project-lvl1"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Topic :: Software Development :: Games",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.scripts]
brain-games-py = "brain_games.scripts.brain_games:main"
brain-even-py = "brain_games.scripts.brain_even:main"
brain-calc-py = "brain_games.scripts.brain_calc:main"
brain-gcd-py = "brain_games.scripts.brain_gcd:main"
brain-progression-py = "brain_games.scripts.brain_progression:main"
brain-prime-py = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
